[project]
name = "abu-malk-services"
version = "0.1.0"
description = "Abu Malk Services Telegram management"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "simple-websocket>=1.1.0",
    "telethon>=1.43.2",
    "psutil>=6.0.0",
]
